--- a/-copy.env
+++ b/-copy.env
@@ -17,8 +17,12 @@ DB_PASSWORD=lailen
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
+SESSION_DOMAIN = 127.0.0.1
+SESSION_SECURE_COOKIE = false
+
+SANCTUM_STATEFUL_DOMAINS = localhost,localhost:8080,127.0.0.1,127.0.0.1:8080
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -27,11 +31,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=587
+MAIL_USERNAME=pahosscenter@gmail.com
+MAIL_PASSWORD=pahoss485
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
